quorum/test/tests/TypeChecker/Pass/ImpAssignNumObjNumObj.quorum
Number n
n:SetValue(7.5)
Number num = n
number x = num:GetValue()