quorum/test/tests/TypeChecker/Fail/ExpAssignTextObjNumObj.quorum
Number num
num:SetValue(7.5)
Text t = cast(Text, num)